--- a/WebContent/index2.html
+++ b/WebContent/index2.html
@@ -116,7 +116,7 @@
 				if(i == pageNumber)
 					str += "<label class='page static'> ##1 </label>".replace(/##1/g, i);
 				else
-					str += "<a class='page' href='index.html?p=##1'> ##1 </a>".replace(/##1/g, i);
+					str += "<a class='page' href='index2.html?p=##1'> ##1 </a>".replace(/##1/g, i);
 				
 				$('.page-index-bar').html(str);					
 			}
